--- a/FinancialManagementApp/Pages/RegistrationPage.xaml
+++ b/FinancialManagementApp/Pages/RegistrationPage.xaml
@@ -4,7 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" 
-      xmlns:fa="http://schemas.fontawesome.io/icons/" xmlns:UserControls="clr-namespace:FinancialManagementApp.Controls.UserControls"
+      xmlns:fa="http://schemas.fontawesome.io/icons/" xmlns:UserControls="clr-namespace:FinancialManagementApp.Controls.UserControls" 
+      xmlns:viewmodels="clr-namespace:FinancialManagementApp.ViewModels" 
+      d:DataContext="{d:DesignInstance Type=viewmodels:RegistrationPageVM}"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Регистрация">
@@ -42,22 +44,20 @@
                     </Grid.ColumnDefinitions>
 
                     <StackPanel Orientation="Vertical" Grid.Column="2">
-                        <UserControls:InputControl x:Name="FirstName" Placeholder="Имя*" Margin="0, 5, 0, 5"  />
+                        <UserControls:InputControl x:Name="FirstName" TextValue="{Binding Path=UserVM.FirstName}" Placeholder="Имя*" Margin="0, 5, 0, 5"  />
 
-                        <UserControls:InputControl x:Name="LastName" Placeholder="Фамилия*" Margin="0, 5, 0, 5"  />
+                        <UserControls:InputControl x:Name="LastName" TextValue="{Binding Path=UserVM.LastName}" Placeholder="Фамилия*" Margin="0, 5, 0, 5"  />
 
-                        <UserControls:InputControl x:Name="MiddleName" Placeholder="Отчество" Margin="0, 5, 0, 5"  />
+                        <UserControls:InputControl x:Name="MiddleName" TextValue="{Binding Path=UserVM.MiddleName}" Placeholder="Отчество" Margin="0, 5, 0, 5"  />
 
-                        <!--<UserControls:InputControl x:Name="Balance" Placeholder="Текущий баланс в рублях (по умолчанию 0 руб.)" Margin="0, 5, 0, 5"  />-->
-
-                        <UserControls:CurrencyInputControl x:Name="Balance" Placeholder="Текущий баланс в рублях (по умолчанию 0 руб.)" Margin="0, 5, 0, 5"  />
+                        <UserControls:CurrencyInputControl x:Name="Balance" TextCurrency="{Binding Path=WalletVM.Balance}"  Placeholder="Текущий баланс в рублях (по умолчанию 0 руб.)" Margin="0, 5, 0, 5"  />
                     </StackPanel>
 
                     <StackPanel Orientation="Vertical"  Grid.Column="0">
 
                         <UserControls:InputControl x:Name="Email" Placeholder="Ваш Email*" Margin="0, 5, 0, 5"  />
 
-                        <UserControls:InputControl x:Name="WalletNumber" Placeholder="Номер карты (счёта)*" Margin="0, 5, 0, 5"  />
+                        <UserControls:InputControl x:Name="WalletNumber" TextValue="{Binding Path=WalletVM.WalletNumber}" Placeholder="Номер карты (счёта)*" Margin="0, 5, 0, 5"  />
 
                         <UserControls:PasswordInputControl x:Name="Password" Placeholder="Пароль*" Margin="0, 5, 0, 5"  />
 
