--- a/FinancialManagementApp/Pages/AuthPage.xaml
+++ b/FinancialManagementApp/Pages/AuthPage.xaml
@@ -42,9 +42,6 @@
             <TextBlock x:Name="ErrorBlock" Visibility="Hidden" HorizontalAlignment="Center" FontSize="14" Margin="0,10,0,0" Foreground="Red"></TextBlock>
         </StackPanel>
 
-        <StackPanel x:Name="Loader" Visibility="Collapsed" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <fa:ImageAwesome Icon="Spinner" Spin="True" Width="50" SpinDuration="4" />
-            <TextBlock  Text="Попытка входа в систему..." FontSize="18" />
-        </StackPanel>
+        <userControls:LoaderControl x:Name="Loader" Visibility="Collapsed" Grid.Column="1" Grid.Row="2" LoaderText="Попытка входа в систему..." />
     </Grid>
 </Page>
