--- a/FinancialManagementApp/Pages/Home/MainPage.xaml
+++ b/FinancialManagementApp/Pages/Home/MainPage.xaml
@@ -42,7 +42,7 @@
                 </Grid.RowDefinitions>
                 
                 <StackPanel>
-                    <TextBlock Text="{Binding Path=StartDate, StringFormat='Статистика за dd.MM.yyyy'}" TextAlignment="Center" FontSize="18" FontWeight="Bold" TextDecorations="Underline" />
+                    <TextBlock Text="{Binding Path=DateTimePeriodView}" TextAlignment="Center" FontSize="18" FontWeight="Bold" TextDecorations="Underline" />
                     <StackPanel VerticalAlignment="Center">
                         <Grid HorizontalAlignment="Center" >
                             <Grid.ColumnDefinitions>
@@ -71,45 +71,15 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock Grid.Column="0"  Text="Другое: " FontSize="14" />
+                            <TextBlock Grid.Column="0"  Text="Другие расходы: " FontSize="14" />
                             <TextBlock Grid.Column="2" Text="{ Binding Path=OtherPeriond, StringFormat='{}{0:N2} руб.'}" FontSize="14" />
-                        </Grid>
-                        <Grid HorizontalAlignment="Center" >
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="10" />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock Grid.Column="0"  Text="Баланс на начало периода: " FontSize="14" />
-                            <TextBlock Grid.Column="2" Text="1000руб." FontSize="14" />
-                        </Grid>
-                        <Grid HorizontalAlignment="Center" >
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="10" />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock Grid.Column="0"  Text="Баланс на конец периода: " FontSize="14" />
-                            <TextBlock Grid.Column="2" Text="1000руб." FontSize="14" />
-                        </Grid>
-                        <Grid HorizontalAlignment="Center" >
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="10" />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock Grid.Column="0"  Text="Самый большой доход: " FontSize="14" />
-                            <TextBlock Grid.Column="2" Text="1000руб." FontSize="14" />
                         </Grid>
                     </StackPanel>
                     
                 </StackPanel>
 
                 <Viewbox  Grid.Row="1">
-                    <Calendar HorizontalAlignment="Center" SelectionMode="SingleRange"></Calendar>
+                    <Calendar HorizontalAlignment="Center" x:Name="calandare" SelectionMode="SingleRange" SelectedDatesChanged="Calendar_SelectedDatesChanged"></Calendar>
                 </Viewbox>
             </Grid>
         </Border>
