--- a/FinancialManagementApp/Window/AddWalletHistoryWindow.xaml
+++ b/FinancialManagementApp/Window/AddWalletHistoryWindow.xaml
@@ -45,7 +45,7 @@
                 </TextBox>
             </StackPanel>
 
-            <StackPanel Margin="0,0,0,10">
+            <StackPanel Margin="0,0,0,10" x:Name="OperationTypePanel">
                 <TextBlock Margin="0, 0, 0, 5" Text="Тип операции:" />
                 <ComboBox x:Name="OperationTypeBox"></ComboBox>
             </StackPanel>
