--- a/FinancialManagementApp/Layouts/HomeLayout.xaml
+++ b/FinancialManagementApp/Layouts/HomeLayout.xaml
@@ -6,7 +6,6 @@
       xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" 
       xmlns:local="clr-namespace:FinancialManagementApp.Controls" 
       xmlns:viewmodels="clr-namespace:FinancialManagementApp.ViewModels;assembly=FinancialManagementApp.Infrastructure" 
-      d:DataContext="{d:DesignInstance Type=viewmodels:HomeLayoutVM}"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
@@ -28,8 +27,21 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
-                <Button Click="OpenAddHistoryModal" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Style="{StaticResource AcceptCustomButtom }" FontSize="12" Padding="0,0,0,0" Height="35" Margin="10,0,0,0" Width="100">Добавить</Button>
+                <Grid Grid.Column="0" HorizontalAlignment="Left">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
 
+                    <Button Click="OpenAddHistoryModal" HorizontalAlignment="Left" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource AcceptCustomButtom }" FontSize="12"  Padding="10,0,10,0" Height="35" Margin="10,0,0,0">Добавить транзакцию</Button>
+                    <Button HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="1"  FontSize="12" Padding="10,0,10,0" Height="35" Margin="10,0,0,0">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="/Images/directory.png" Width="24" />
+                            <TextBlock Text="Категории" VerticalAlignment="Center" Margin="10,0,0,0" />
+                        </StackPanel> 
+                    </Button>
+                </Grid>
+                                
                 <StackPanel Grid.Column="2" HorizontalAlignment="Right" Margin="0, 0, 10, 0">
                     <DockPanel Margin="0, 0, 0, 3">
                         <TextBlock Text="{ Binding Path=UserVM.LastName }" Margin="0,0,5,0" FontSize="16" FontWeight="SemiBold" />
