--- a/FinancialManagementApp/Window/AddWalletHistoryWindow.xaml
+++ b/FinancialManagementApp/Window/AddWalletHistoryWindow.xaml
@@ -28,7 +28,7 @@
             </Grid.ColumnDefinitions>
 
             <svgc:SvgViewbox Grid.Column="0"  Height="30" Width="30" Source="/Images/add.svg" />
-            <TextBlock x:Name="WindowTitle" Grid.Column="1" Margin="10,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  Text="Добаление операции" />
+            <TextBlock x:Name="WindowTitle" Grid.Column="1" Margin="10,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  Text="Добаление транзакции" />
         </Grid>
 
         <StackPanel Grid.Column="1"  Grid.Row="1" Margin="0,20,0,0">
