--- a/FinancialManagementApp/Themes/Generic.xaml
+++ b/FinancialManagementApp/Themes/Generic.xaml
@@ -17,18 +17,23 @@
                             CornerRadius="8"
                             Padding="{ TemplateBinding Padding }"
                             x:Name="back">
-                        <Path x:Name="icon" Data="{ TemplateBinding Icon }" Stretch="Uniform" Fill="#7b8792" Height="18" Width="18" />
+                        <StackPanel>
+                            <Path x:Name="icon" Data="{ TemplateBinding Icon }" Stretch="Uniform" Fill="#7b8792" Height="18" Width="18" />
+                            <TextBlock x:Name="Text" Padding="0,6,0,0" Text="{ TemplateBinding Text }" HorizontalAlignment="Center" />
+                        </StackPanel>
                     </Border>
 
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Background" TargetName="back" Value="#d0edff"></Setter>
                             <Setter Property="Fill" TargetName="icon" Value="#2a84f1"></Setter>
+                            <Setter Property="Foreground" TargetName="Text" Value="#2a84f1"></Setter>
                         </Trigger>
 
                         <Trigger Property="IsSelected" Value="True">
                             <Setter Property="Background" TargetName="back" Value="#d0edff"></Setter>
                             <Setter Property="Fill" TargetName="icon" Value="#2a84f1"></Setter>
+                            <Setter Property="Foreground" TargetName="Text" Value="#2a84f1"></Setter>
                         </Trigger>
 
                     </ControlTemplate.Triggers>
