--- a/FinancialManagementApp/Pages/Home/DirectoryPage.xaml
+++ b/FinancialManagementApp/Pages/Home/DirectoryPage.xaml
@@ -43,7 +43,7 @@
                         <ColumnDefinition Width="100" />
                     </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0" FontSize="11"  Padding="10,0,10,0" Height="30">Добавить</Button>
+                    <Button Grid.Column="0" FontSize="11"  Padding="10,0,10,0" Height="30" Click="AddCategory_Click">Добавить</Button>
                     <Button Grid.Column="2" x:Name="EditCategoryBtn" FontSize="11" Visibility="Hidden"  Padding="10,0,10,0" Height="30">Реадктировать</Button>
                     <Button Grid.Column="4" x:Name="RemoveCategoryBtn" FontSize="11" Visibility="Hidden"  Padding="10,0,10,0" Height="30">Удалить</Button>
                 </Grid>
@@ -61,8 +61,6 @@
                 <StackPanel Margin="0,0,0,0" Grid.Column="0" Grid.Row="2">
                     <DataGrid x:Name="ExpensesCategoryTable" 
                               AutoGenerateColumns="False"
-                              CanUserAddRows="True"
-                              SelectionMode="Single"
                               SelectionChanged="ExpensesCategoryTable_SelectionChanged">
                         <DataGrid.RowStyle>
                             <Style TargetType="{x:Type DataGridRow}">
@@ -71,7 +69,6 @@
                         </DataGrid.RowStyle>
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="№" Width="40" TextBlock.TextAlignment="Center" CanUserResize="False" CanUserSort="False" CanUserReorder="False" />
                             <DataGridTextColumn Header="Категория" Width="*" CanUserResize="False" CanUserSort="False" CanUserReorder="False" Binding="{ Binding Path=Name }" />
                         </DataGrid.Columns>
                     </DataGrid>
@@ -80,7 +77,7 @@
                     <DataGrid 
                         x:Name="ExpensesSubCategoryTable" 
                         AutoGenerateColumns="False"
-                        CanUserAddRows="True"
+                        CanUserAddRows="False"
                         >
                         <DataGrid.RowStyle>
                             <Style TargetType="{x:Type DataGridRow}">
@@ -89,7 +86,6 @@
                         </DataGrid.RowStyle>
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="№" Width="40" CanUserResize="False" CanUserSort="False" CanUserReorder="False" />
                             <DataGridTextColumn Header="Подкатегория" Width="*" CanUserResize="False" CanUserSort="False" CanUserReorder="False" Binding="{ Binding Path=Name }" />
                         </DataGrid.Columns>
                     </DataGrid>
