--- a/FinancialManagementApp/Modals/AddWalletHistoryWindow.xaml
+++ b/FinancialManagementApp/Modals/AddWalletHistoryWindow.xaml
@@ -5,14 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinancialManagementApp" 
         xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" 
-        xmlns:viewmodels="clr-namespace:FinancialManagementApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:WalletHistoryVM}"
+        xmlns:viewmodels="clr-namespace:FinancialManagementApp.ViewModels" 
+        xmlns:local1="clr-namespace:FinancialManagementApp.Converters" 
+        d:DataContext="{d:DesignInstance Type=viewmodels:WalletHistoryVM}"
         mc:Ignorable="d"
-        Title="AddWalletHistoryWindow" Height="370" Width="550" ResizeMode="NoResize">
+        Title="AddWalletHistoryWindow" Height="370" Width="850" ResizeMode="NoResize">
+    <Window.Resources>
+        <local1:CategoryRowColorConvertor x:Key="CategoryRowColorConvertor" />
+    </Window.Resources>
     <Grid>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition Width="4*" />
-            <ColumnDefinition />
+            <ColumnDefinition Width="20" />
+            <ColumnDefinition Width="300" />
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="48*" />
@@ -36,7 +44,7 @@
                 <TextBlock Margin="0, 0, 0, 5" Text="Сумма:*" />
                 <TextBox >
                     <TextBox.Text>
-                        <Binding Path="WalletValue" StringFormat="{}{0:N2}" UpdateSourceTrigger="PropertyChanged">
+                        <Binding Path="walletHistoryVM.WalletValue" StringFormat="{}{0:N2}" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
                                 <ExceptionValidationRule />
                             </Binding.ValidationRules>
@@ -52,10 +60,28 @@
 
             <StackPanel>
                 <TextBlock Margin="0, 0, 0, 5" Text="Комментарий к операции:" />
-                <TextBox Text="{Binding Path=Comment}" VerticalScrollBarVisibility="Visible" AcceptsReturn="True" TextWrapping="Wrap" Height="70" />
+                <TextBox Text="{Binding Path=walletHistoryVM.Comment}" VerticalScrollBarVisibility="Visible" AcceptsReturn="True" TextWrapping="Wrap" Height="70" />
             </StackPanel>
 
         </StackPanel>
+
+        <DataGrid x:Name="ExpensesCategoryTable" 
+          AutoGenerateColumns="False"
+          VerticalScrollBarVisibility="Auto"
+          CanUserAddRows="False"
+          Grid.Column="3"
+                  Grid.Row="1"
+          >
+            <DataGrid.RowStyle>
+                <Style TargetType="{x:Type DataGridRow}">
+                    <Setter Property="Background" Value="{Binding Path=Color, Converter={StaticResource CategoryRowColorConvertor}}" />
+                </Style>
+            </DataGrid.RowStyle>
+
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Категория" Width="*" IsReadOnly="True" CanUserResize="False" CanUserSort="False" CanUserReorder="False" Binding="{ Binding Path=Name}" FontSize="13" />
+            </DataGrid.Columns>
+        </DataGrid>
 
         <Grid Grid.Row="2" Grid.Column="1">
             <Grid.ColumnDefinitions>
